# adhan.py

./: README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
adhan/: __init__.py  client.py  const.py  models.py  utils.py
